--- a/RunFlexFE/public/index.html
+++ b/RunFlexFE/public/index.html
@@ -16,11 +16,18 @@
     <link rel="stylesheet" href="css/sign.css.map">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
+    <!-- Link CSS và JS của SweetAlert -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <script src="app.js"></script>
     <script src="controller/homeController.js"></script>
     <script src="controller/productController.js"></script>
     <script src="controller/productDetailController.js"></script>
+    <script src="controller/cartController.js"></script>
+    <script src="controller/demo.js"></script>
     <link rel="stylesheet" href="plugins/uikit/uikit.min.css" />
+    <link rel="stylesheet" href="css/productDetail.css">
     <title>Runner</title>
 </head>
 
