--- a/RunFlexFE/public/index.html
+++ b/RunFlexFE/public/index.html
@@ -26,6 +26,7 @@
     <script src="controller/productDetailController.js"></script>
     <script src="controller/cartController.js"></script>
     <script src="controller/demo.js"></script>
+    <script src="controller/accountController.js"></script>
     <link rel="stylesheet" href="plugins/uikit/uikit.min.css" />
     <link rel="stylesheet" href="css/productDetail.css">
     <title>Runner</title>
